--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "73d000b6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "ab8c8147",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "8edf5c80",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "587438b0",
    "metadata": {},
    "outputs": [
@@ -87,43 +87,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Total Office Based Visit Costs  Dr Advised Smoking at Home is Bad  \\\n",
-      "0                           248.0                                 -1   \n",
-      "1                         16039.0                                 -1   \n",
-      "2                           217.0                                 -1   \n",
-      "3                          1278.0                                 -1   \n",
-      "4                          3530.0                                 -1   \n",
-      "\n",
-      "   Alcohol Consumption  Advised to Stop Alcohol  Work Industry  \\\n",
-      "0                    1                        2           -1.0   \n",
-      "1                   -1                       -1           -1.0   \n",
-      "2                   -1                       -1            5.0   \n",
-      "3                   -1                       -1           10.0   \n",
-      "4                    4                        2           10.0   \n",
-      "\n",
-      "   Years of Education  Covid Vaccine  Flu Vaccine prior 12 months  \\\n",
-      "0                   6              2                            2   \n",
-      "1                  14              1                           -1   \n",
-      "2                  17              1                           -1   \n",
-      "3                  16              1                           -1   \n",
-      "4                  16              1                            1   \n",
-      "\n",
-      "   Cholesterol checked within 5 years  High Cholesterol Diagnosis  \\\n",
-      "0                                   1                           1   \n",
-      "1                                  -1                           2   \n",
-      "2                                  -1                           2   \n",
-      "3                                  -1                           2   \n",
-      "4                                   1                           1   \n",
-      "\n",
-      "   Dr Advised Exercise  Diabetes Diagnosis  Smoking Frequency  Gender  \n",
-      "0                   -1                   1                  3       2  \n",
-      "1                   -1                   2                  3      -1  \n",
-      "2                   -1                   2                 -8      -1  \n",
-      "3                   -1                   2                  2      -1  \n",
-      "4                   -1                   2                  3       2  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5364 entries, 0 to 5363\n",
-      "Data columns (total 14 columns):\n",
+      "Data columns (total 27 columns):\n",
       " #   Column                              Non-Null Count  Dtype  \n",
       "---  ------                              --------------  -----  \n",
       " 0   Total Office Based Visit Costs      5363 non-null   float64\n",
@@ -140,243 +106,22 @@
       " 11  Diabetes Diagnosis                  5364 non-null   int64  \n",
       " 12  Smoking Frequency                   5364 non-null   int64  \n",
       " 13  Gender                              5364 non-null   int64  \n",
-      "dtypes: float64(2), int64(12)\n",
-      "memory usage: 586.8 KB\n"
+      " 14  Dr Advised to Eat Healthy           5364 non-null   int64  \n",
+      " 15  Perceived Mental Status             5364 non-null   int64  \n",
+      " 16  Ever had COVID19                    5364 non-null   int64  \n",
+      " 17  Asthma Diagnosis                    5364 non-null   int64  \n",
+      " 18  Arthritis Diagnosis                 5364 non-null   int64  \n",
+      " 19  Cancer Diagnosis                    5364 non-null   int64  \n",
+      " 20  Stroke Diagnosis                    5364 non-null   int64  \n",
+      " 21  Heart Attack Diagnosis              5364 non-null   int64  \n",
+      " 22  Coronary Artery Disease Diagnosis   5364 non-null   int64  \n",
+      " 23  Born in USA                         5364 non-null   int64  \n",
+      " 24  Years lived in USA                  5364 non-null   int64  \n",
+      " 25  How Well Person Speaks English      5364 non-null   int64  \n",
+      " 26  Marital Status                      5364 non-null   int64  \n",
+      "dtypes: float64(2), int64(25)\n",
+      "memory usage: 1.1 MB\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Office Based Visit Costs</th>\n",
-       "      <th>Dr Advised Smoking at Home is Bad</th>\n",
-       "      <th>Alcohol Consumption</th>\n",
-       "      <th>Advised to Stop Alcohol</th>\n",
-       "      <th>Work Industry</th>\n",
-       "      <th>Years of Education</th>\n",
-       "      <th>Covid Vaccine</th>\n",
-       "      <th>Flu Vaccine prior 12 months</th>\n",
-       "      <th>Cholesterol checked within 5 years</th>\n",
-       "      <th>High Cholesterol Diagnosis</th>\n",
-       "      <th>Dr Advised Exercise</th>\n",
-       "      <th>Diabetes Diagnosis</th>\n",
-       "      <th>Smoking Frequency</th>\n",
-       "      <th>Gender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>5363.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5363.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2876.164460</td>\n",
-       "      <td>-0.568419</td>\n",
-       "      <td>0.351603</td>\n",
-       "      <td>0.233781</td>\n",
-       "      <td>2.861645</td>\n",
-       "      <td>10.862603</td>\n",
-       "      <td>1.157532</td>\n",
-       "      <td>0.005779</td>\n",
-       "      <td>-0.135160</td>\n",
-       "      <td>1.092095</td>\n",
-       "      <td>-0.576063</td>\n",
-       "      <td>1.845451</td>\n",
-       "      <td>1.944444</td>\n",
-       "      <td>-0.162192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>11647.075357</td>\n",
-       "      <td>1.074330</td>\n",
-       "      <td>2.963350</td>\n",
-       "      <td>2.221252</td>\n",
-       "      <td>5.207828</td>\n",
-       "      <td>5.580054</td>\n",
-       "      <td>0.960519</td>\n",
-       "      <td>2.086906</td>\n",
-       "      <td>2.016481</td>\n",
-       "      <td>1.192814</td>\n",
-       "      <td>1.031661</td>\n",
-       "      <td>0.521204</td>\n",
-       "      <td>1.891394</td>\n",
-       "      <td>2.678110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-15.000000</td>\n",
-       "      <td>-15.000000</td>\n",
-       "      <td>-15.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-15.000000</td>\n",
-       "      <td>-15.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-8.000000</td>\n",
-       "      <td>-15.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>333.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>1.500000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1833.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>283775.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Total Office Based Visit Costs  Dr Advised Smoking at Home is Bad  \\\n",
-       "count                     5363.000000                        5364.000000   \n",
-       "mean                      2876.164460                          -0.568419   \n",
-       "std                      11647.075357                           1.074330   \n",
-       "min                          0.000000                          -8.000000   \n",
-       "25%                          0.000000                          -1.000000   \n",
-       "50%                        333.000000                          -1.000000   \n",
-       "75%                       1833.000000                          -1.000000   \n",
-       "max                     283775.000000                           2.000000   \n",
-       "\n",
-       "       Alcohol Consumption  Advised to Stop Alcohol  Work Industry  \\\n",
-       "count          5364.000000              5364.000000    5363.000000   \n",
-       "mean              0.351603                 0.233781       2.861645   \n",
-       "std               2.963350                 2.221252       5.207828   \n",
-       "min             -15.000000               -15.000000     -15.000000   \n",
-       "25%              -1.000000                -1.000000      -1.000000   \n",
-       "50%              -1.000000                -1.000000      -1.000000   \n",
-       "75%               1.000000                 2.000000       8.000000   \n",
-       "max               7.000000                 2.000000      15.000000   \n",
-       "\n",
-       "       Years of Education  Covid Vaccine  Flu Vaccine prior 12 months  \\\n",
-       "count         5364.000000    5364.000000                  5364.000000   \n",
-       "mean            10.862603       1.157532                     0.005779   \n",
-       "std              5.580054       0.960519                     2.086906   \n",
-       "min             -8.000000      -8.000000                   -15.000000   \n",
-       "25%              9.000000       1.000000                    -1.000000   \n",
-       "50%             12.000000       1.000000                    -1.000000   \n",
-       "75%             16.000000       2.000000                     1.000000   \n",
-       "max             17.000000       2.000000                     2.000000   \n",
-       "\n",
-       "       Cholesterol checked within 5 years  High Cholesterol Diagnosis  \\\n",
-       "count                         5364.000000                 5364.000000   \n",
-       "mean                            -0.135160                    1.092095   \n",
-       "std                              2.016481                    1.192814   \n",
-       "min                            -15.000000                   -8.000000   \n",
-       "25%                             -1.000000                    1.000000   \n",
-       "50%                             -1.000000                    1.500000   \n",
-       "75%                              1.000000                    2.000000   \n",
-       "max                              2.000000                    2.000000   \n",
-       "\n",
-       "       Dr Advised Exercise  Diabetes Diagnosis  Smoking Frequency       Gender  \n",
-       "count          5364.000000         5364.000000        5364.000000  5364.000000  \n",
-       "mean             -0.576063            1.845451           1.944444    -0.162192  \n",
-       "std               1.031661            0.521204           1.891394     2.678110  \n",
-       "min              -8.000000           -8.000000          -8.000000   -15.000000  \n",
-       "25%              -1.000000            2.000000           1.000000    -1.000000  \n",
-       "50%              -1.000000            2.000000           3.000000    -1.000000  \n",
-       "75%              -1.000000            2.000000           3.000000     2.000000  \n",
-       "max               2.000000            2.000000           3.000000     2.000000  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -396,7 +141,20 @@
     "    'DIABDX_M18': 'Diabetes Diagnosis',\n",
     "    'OFTSMK53' : 'Smoking Frequency',\n",
     "    'ADSEX42' : 'Gender',\n",
-    "   \n",
+    "    'EATHLT42' : 'Dr Advised to Eat Healthy',\n",
+    "    'MNHLTH53': 'Perceived Mental Status',\n",
+    "    'COVIDEVER53' : 'Ever had COVID19',\n",
+    "    'ASTHDX' : 'Asthma Diagnosis',\n",
+    "    'ARTHDX' : 'Arthritis Diagnosis',\n",
+    "    'CANCERDX' : 'Cancer Diagnosis',\n",
+    "    'STRKDX' : 'Stroke Diagnosis',\n",
+    "    'MIDX' : 'Heart Attack Diagnosis',\n",
+    "    'CHDDX' : 'Coronary Artery Disease Diagnosis',\n",
+    "    'BORNUSA' : 'Born in USA',\n",
+    "    'YRSINUS' : 'Years lived in USA',\n",
+    "    'HWELLSPK' : 'How Well Person Speaks English',\n",
+    "    'MARRY22X' : 'Marital Status',\n",
+    "    \n",
     "    })\n",
     "\n",
     "\n",
@@ -414,12 +172,27 @@
     "         'Dr Advised Exercise',\n",
     "         'Diabetes Diagnosis',\n",
     "         'Smoking Frequency',\n",
-    "         'Gender']]\n",
+    "         'Gender',\n",
+    "         'Dr Advised to Eat Healthy',\n",
+    "         'Perceived Mental Status',\n",
+    "         'Ever had COVID19',\n",
+    "         'Asthma Diagnosis',\n",
+    "         'Arthritis Diagnosis',\n",
+    "         'Cancer Diagnosis',\n",
+    "         'Stroke Diagnosis',\n",
+    "         'Heart Attack Diagnosis',\n",
+    "         'Coronary Artery Disease Diagnosis',\n",
+    "         'Born in USA',\n",
+    "         'Years lived in USA',\n",
+    "         'How Well Person Speaks English',\n",
+    "         'Marital Status',\n",
+    "         \n",
+    "         ]]\n",
     "\n",
     "# View summary info\n",
-    "print(df.head())\n",
+    "#print(df.head())\n",
     "df.info()\n",
-    "df.describe()\n"
+    "#df.describe()\n"
    ]
   }
  ],
